# Limerikk

./: .gitignore  CMakeLists.txt  Makefile  README.md  index.html  limerikk_wasm.js  limerikk_wasm.wasm  worker.js
.github/workflows/: deploy.yml
benchmark/: CMakeLists.txt  benchmark.cpp
datagen/: CMakeLists.txt  datagen.cpp
eval/: CMakeLists.txt  eval.cpp
limerikk/: CMakeLists.txt
limerikk/meta/: bin_to_header.cpp  nnue_embed.py  precompute_tables.cpp
limerikk/src/: common.h  eval.cpp  limerikk.h  move.cpp  nnue.cpp  perft.cpp  position.cpp  search.cpp  zobrist.cpp
limerikk/src/opening_book/: polyglot.cpp  polyglot_random.h
nnue/: aggregate.py  model.py  serialize.py  test.py  train.py
nnue/dataloader/: Cargo.toml  pyproject.toml
nnue/dataloader/src/: lib.rs
spsa/: CMakeLists.txt  balanced_openings.h  spsa.cpp
tests/: CMakeLists.txt  test_eval.cpp  test_fen.cpp  test_misc.cpp  test_perft.cpp  test_polyglot.cpp  test_zobrist.cpp
uci/: CMakeLists.txt  uci  uci.cpp
wasm/: CMakeLists.txt  blunderfish_wasm.js  blunderfish_wasm.wasm  build.sh  wasm_main.cpp
webui/: index.html  worker.js
